[Bug #77719] IE8/IE9 - ALL - the hero image at the middle of the screen is not centered

--- a/tourismaustralia-styleguide/assets/scss/site/modules/_largeparallax.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_largeparallax.scss
@@ -136,3 +136,11 @@
 		width: 100%;
 	}
 }
+
+.legacy-img.show-on-ie8,
+.legacy-img.show-on-ie9{
+  & > img {
+    position: relative;
+    top: -400px;
+  }
+}
